--- a/index.html
+++ b/index.html
@@ -4,18 +4,38 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="./style/style.css">
   
   <title>Frontend Mentor | Project tracking intro component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  
 </head>
 <body>
-  Product
+  <nav>
+    <img src="./images/logo.svg" alt="">
+    <ul>
+      <li><a>Product</a></li>
+      <li><a>Features</a></li>
+      <li><a>Pricing</a></li>
+      <li><a>PLogin</a></li>
+    </ul>
+  </nav>
+  <header>
+    <div>
+      <p><span>NEW</span> MONOGRAPH Dashboard</p>
+      <h1>Powerful insights into your team</h1>
+      <p>Project planning and time tracking for agile teams</p>
+      <div>
+        <button> Schedule a demo</button>
+        <p>to see a live preview</p>
+      </div>
+    </div>
+    <div>
+      <img src="./images/illustration-devices.svg" alt="">
+    </div>
+  </header>
+  <!-- Product
   Features
   Pricing
   Login
@@ -27,13 +47,8 @@
   Project planning and time tracking for agile teams
 
   Schedule a demo
-  to see a live preview
+  to see a live preview -->
   
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
+  
 </body>
 </html>
