--- a/index.html
+++ b/index.html
@@ -14,17 +14,18 @@
 <body>
   <nav>
     <img src="./images/logo.svg" alt="">
-    <ul>
+    <ul class="link-container">
       <li><a>Product</a></li>
       <li><a>Features</a></li>
       <li><a>Pricing</a></li>
-      <li><a>PLogin</a></li>
+      <li><a class="login">.</a></li>
+      <li><a class="login">PLogin</a></li>
     </ul>
   </nav>
   <header>
     <div>
       <p><span>NEW</span> MONOGRAPH Dashboard</p>
-      <h1>Powerful insights into your team</h1>
+      <h1>POWERFUL INSIGHT INTO YOUR TEAM</h1>
       <p>Project planning and time tracking for agile teams</p>
       <div>
         <button> Schedule a demo</button>
