--- a/index.html
+++ b/index.html
@@ -19,23 +19,24 @@
       <li><a>Features</a></li>
       <li><a>Pricing</a></li>
       <li><a class="login">.</a></li>
-      <li><a class="login">PLogin</a></li>
+      <li><a class="login">Login</a></li>
     </ul>
   </nav>
   <header>
-    <div>
-      <p><span>NEW</span> MONOGRAPH Dashboard</p>
+    <div class="info">
+      <p id="subtitel"><span>NEW</span> MONOGRAPH Dashboard</p>
       <h1>POWERFUL INSIGHT INTO YOUR TEAM</h1>
-      <p>Project planning and time tracking for agile teams</p>
-      <div>
-        <button> Schedule a demo</button>
-        <p>to see a live preview</p>
+      <p id="description">Project planning and time tracking for agile teams</p>
+      <div class="buton-container">
+        <button>SCHEDULE A DEMO</button>
+        <p>TO SEE A LIVE PREVIEW</p>
       </div>
     </div>
-    <div>
+    <div class="image">
       <img src="./images/illustration-devices.svg" alt="">
     </div>
   </header>
+  <div id="bg"></div>
   <!-- Product
   Features
   Pricing
